# drive

./: CHANGELOG.md  Cargo.toml  Dockerfile  PIPELINE.md  README.md  deny.toml
.github/workflows/: ci.yml  pages.yml
crates/drive-auth/examples/: hash.rs
crates/drive-auth/src/: handlers.rs  lib.rs  oidc.rs
crates/drive-bin/: Cargo.toml
crates/drive-bin/src/: main.rs
crates/drive-core/: Cargo.toml
crates/drive-core/src/: config.rs  error.rs  id.rs  lib.rs
crates/drive-db/migrations/: 0003_file_thumbnail.sql  0005_workspaces.sql
crates/drive-db/src/: files.rs  folders.rs  lib.rs  notes.rs  users.rs  workspace_storage.rs  workspaces.rs
crates/drive-db/tests/: repos.rs
crates/drive-http/: Cargo.toml
crates/drive-http/src/: direct_upload.rs  files.rs  headers.rs  host_dispatch.rs  invitations.rs  lib.rs  notes.rs  oidc.rs  presence.rs  raw.rs  search.rs  share.rs  state.rs  thumbs.rs  workspace_storage.rs  workspaces.rs
crates/drive-http/tests/: activity.rs  admin.rs  byo_storage.rs  direct_upload.rs  files.rs  handoff.rs  invitations.rs  search.rs  settings.rs  setup.rs  share.rs  two_origin.rs  workspaces.rs
crates/drive-storage/: Cargo.toml
crates/drive-storage/src/: byo.rs  lib.rs  registry.rs  secret_box.rs  thumbnails.rs
crates/drive-storage/tests/: conformance.rs  subprocess_worker.rs
crates/drive-thumb-worker/src/: main.rs
crates/drive-wopi/: Cargo.toml
crates/drive-wopi/src/: error.rs  handlers.rs  lib.rs  router.rs  state.rs  token.rs
crates/drive-wopi/tests/: edit_cycle.rs
docs/research/: 07-marketing-site.md  15-sandboxed-thumb-worker.md  16-scale-infra.md  17-notes-general-user-ux.md
docs/ux/: 09-sort-and-select.md  12-search-surface.md  13-workspaces-surface.md  14-marketing-surface.md  15-byo-storage-surface.md
marketing/: .gitignore  astro.config.mjs  lighthouserc.json  package.json  pnpm-lock.yaml  tsconfig.json
marketing/.lighthouseci/: assertion-results.json  lhr-1780856915733.html  lhr-1780856915733.json  lhr-1780856925758.html  lhr-1780856925758.json  links.json
marketing/public/: robots.txt
marketing/public/fonts/: .gitkeep
marketing/scripts/: build-og.mjs
marketing/src/components/: Compare.astro  FeatureGrid.astro  FinalCta.astro  Footer.astro  Hero.astro  HowItWorks.astro  Logo.astro  Nav.astro  ScreenshotShowcase.astro  ThemeToggle.astro
marketing/src/components/icons/: Activity.astro  ArrowLeft.astro  ArrowRight.astro  Box.astro  Cpu.astro  EyeOff.astro  FileText.astro  Github.astro  Menu.astro  RotateCw.astro  Search.astro  Server.astro  Shield.astro  Star.astro  X.astro
marketing/src/layouts/: Base.astro  DocLayout.astro
marketing/src/pages/: index.astro  robots.txt.ts  screenshots.astro  sitemap.xml.ts
marketing/src/pages/demo/: index.astro
marketing/src/pages/docs/: architecture.mdx  configuration.mdx  contributing.mdx  install.mdx
marketing/src/styles/: base.css  fonts.css  tokens.css
spikes/05-spa-shell/: index.html
spikes/05-spa-shell/src/: App.tsx
spikes/05-spa-shell/src/components/: Logo.tsx
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: CNAME
web/scripts/: copy-embed.mjs
web/src/api/: client.ts  demo.ts  thumbnail.ts
web/src/components/: ComingSoon.tsx  DemoBanner.tsx  FileThumb.tsx  Logo.tsx  NoResultsRecovery.tsx  PreviewModal.tsx  RecentSearchesPopover.tsx  SelectionBar.tsx  ShareDialog.tsx  Sidebar.tsx  SortMenu.tsx  ThemeToggle.tsx  TopBar.tsx  WorkspaceStorageCard.tsx  WorkspaceSwitcher.tsx
web/src/components/editor/: CasualDocEditor.tsx  CasualSheetWorkspace.tsx  SheetEmbed.tsx  SheetToolbar.tsx
web/src/components/notes/: BlockHandle.tsx  MarkdownEditor.tsx  noteLink.ts
web/src/components/preview/: MediaPlayer.tsx  PreviewStage.tsx  media-player.css
web/src/pages/: FileFullscreen.tsx  Files.tsx  InviteAccept.tsx  Settings.tsx  Shell.tsx  SignIn.tsx
web/src/pages/settings/: AboutSection.tsx  MembersSection.tsx  StorageSection.tsx
web/src/state/: PresenceContext.tsx
web/src/styles/: tokens.css
web/tests/e2e/: _chrome-gate.spec.ts  _iframe-verify.spec.ts  marketing-screenshots.mjs  sdk-integration.spec.ts  search-perf.spec.ts
