[package]
name        = "drive"
description = "Casual Drive — self-hostable file manager for the Casual Office suite"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "drive"
path = "src/main.rs"

[dependencies]
drive-core    = { path = "../drive-core" }
drive-storage = { path = "../drive-storage" }
drive-wopi    = { path = "../drive-wopi" }
drive-auth    = { path = "../drive-auth" }
drive-http    = { path = "../drive-http" }

axum               = { workspace = true }
tokio              = { workspace = true }
tower-http         = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
