[package]
name        = "drive-core"
description = "Domain types, errors, IDs, and config for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
ulid      = { workspace = true }
url       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
