[package]
name        = "drive-storage"
description = "Storage facade over OpenDAL — filesystem / memory / S3 / MinIO"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
drive-core = { path = "../drive-core" }

opendal    = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
time       = { workspace = true }
url        = { workspace = true }
hmac       = { workspace = true }
sha2       = { workspace = true }
subtle     = { workspace = true }
base64     = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
