[package]
name        = "drive-wopi"
description = "WOPI host implementation for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
drive-core    = { path = "../drive-core" }
drive-storage = { path = "../drive-storage" }

axum          = { workspace = true }
tokio         = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
time          = { workspace = true }
jsonwebtoken  = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower          = { version = "0.5", features = ["util"] }
